# Dante-CLI-Qt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SPEC.md  vcpkg.json
.github/workflows/: windows-build.yml
_integration/: SPEC-022-INTEGRATION.md  SPEC-023-INTEGRATION.md  SPEC-024-INTEGRATION.md  SPEC-040-INTEGRATION.md  SPEC-051-INTEGRATION.md  SPEC-060-INTEGRATION.md  SPEC-070-INTEGRATION.md  SPEC-080-INTEGRATION.md  SPEC-081-INTEGRATION.md  SPEC-150-INTEGRATION.md  SPEC-151-INTEGRATION.md  SPEC-160-INTEGRATION.md  SPEC-170-INTEGRATION.md  SPEC-171-INTEGRATION.md  SPEC-172-INTEGRATION.md
apps/desktop-qt/: CMakeLists.txt
apps/desktop-qt/src/: AIController.cpp  AIController.h  AIProvidersModel.cpp  AIProvidersModel.h  AppState.cpp  AppState.h  AutoFillController.cpp  AutoFillController.h  CalculatorController.cpp  CalculatorController.h  CredentialsModel.cpp  CredentialsModel.h  FavoritesModel.cpp  FavoritesModel.h  FileTreeController.cpp  FileTreeController.h  GeneratorsModel.cpp  GeneratorsModel.h  GitStatusProvider.cpp  GitStatusProvider.h  LayoutTemplatesController.cpp  LayoutTemplatesController.h  PaletteController.cpp  PaletteController.h  ProcessStatsController.cpp  ProcessStatsController.h  ResourcesController.cpp  ResourcesController.h  SnippetsModel.cpp  SnippetsModel.h  TabsModel.cpp  TabsModel.h  TerminalBridge.cpp  TerminalBridge.h  TerminalView.cpp  TerminalView.h  TrayController.cpp  TrayController.h  UpdateController.cpp  UpdateController.h  (+3 more)
core/: CMakeLists.txt
core/ai/: AIProvider.h  AIProviderStore.cpp  AIProviderStore.h  GroqClient.cpp  GroqClient.h
core/autofill/: AutoFillEngine.cpp  AutoFillEngine.h
core/calculator/: CalculatorEngine.cpp  CalculatorEngine.h
core/claude/: ClaudeResourceScanner.cpp  ClaudeResourceScanner.h  ClaudeResources.h
core/domain/: EventBus.cpp  EventBus.h  Models.h
core/generators/: Generator.h  GeneratorsRegistry.cpp  GeneratorsRegistry.h  generators_seed.json
core/i18n/: Translator.cpp  Translator.h
core/persistence/: AppPaths.cpp  AppPaths.h  JsonStore.cpp  JsonStore.h
core/system/: ProcessStats.cpp  ProcessStats.h
core/telemetry/: Logger.cpp  Logger.h
core/terminal/: IPtyAdapter.h  TerminalBuffer.cpp  TerminalBuffer.h  TerminalRegistry.cpp  TerminalRegistry.h  TerminalSession.cpp  TerminalSession.h  VTParser.cpp  VTParser.h
core/themes/: TerminalScheme.cpp  TerminalScheme.h  ThemeRegistry.cpp  ThemeRegistry.h
core/update/: UpdateChecker.cpp  UpdateChecker.h
i18n/: dante_en.ts  dante_pt_BR.ts
infra/: CMakeLists.txt
infra/audio-adapters/: IVoiceCapture.h  MacVoiceCapture.cpp  MacVoiceCapture.h  QtVoiceCapture.cpp  QtVoiceCapture.h  WasapiVoiceCapture.cpp  WasapiVoiceCapture.h
infra/shell-adapters/: ConPtyAdapter.cpp  ConPtyAdapter.h  ShellAdapter.cpp  ShellAdapter.h  UnixPtyAdapter.cpp  UnixPtyAdapter.h
installer/: dante-cli.iss
ui/qml/: AIMessage.qml  AIOverlay.qml  AIProvidersTab.qml  AboutView.qml  AgentsTab.qml  AutoFillDialog.qml  BottomToolbar.qml  BrowserView.qml  CalculatorPipWindow.qml  CalculatorView.qml  CheatsheetView.qml  CommandPalette.qml  EditorView.qml  EmptySlot.qml  FileTreeView.qml  GeneratorsPalette.qml  GridWorkspace.qml  LayoutDesigner.qml  MCPsTab.qml  Main.qml  MovablePopup.qml  PaneView.qml  RecursiveSplit.qml  ResourceRow.qml  RightSidebar.qml  SchemePicker.qml  SettingsPanel.qml  Sidebar.qml  SkillsTab.qml  SplitContainer.qml  TabBar.qml  TabChip.qml  Terminal.qml  Theme.qml  UpdateBanner.qml  VideoOpenDialog.qml  VideoView.qml  VoiceWidget.qml
ui/qml/editors/: AIProviderEditor.qml  CredentialEditor.qml  EmojiPicker.qml  FavoriteEditor.qml  SnippetEditor.qml
